# cisco-umbrella-mcp

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: cisco_umbrella_app_discovery_api_2_0_2.yaml  cisco_umbrella_application_lists_api_1_0_1.yaml  cisco_umbrella_reporting_api_2_0_0.yaml  umbrella-authentication.md  umbrella-gettingstarted.md  umbrella-ouathscopes.md  umbrella-pagination.md  umbrella-ratelimits.md  umbrella-samplescripts.md  umbrella-troubleshooting.md
src/cisco_umbrella_mcp/: __init__.py  __main__.py  auth.py  client.py  server.py
src/cisco_umbrella_mcp/tools/: __init__.py  admin.py  appdiscovery.py  deployments.py  investigate.py  policies.py  reports.py
tests/: conftest.py  test_auth.py  test_client.py  test_investigate.py  test_policies.py
