[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cisco-umbrella-mcp"
version = "0.1.0"
description = "MCP server for the Cisco Umbrella API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
]

[project.scripts]
cisco-umbrella-mcp = "cisco_umbrella_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cisco_umbrella_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
